# rusty_port

./: .gitignore  Cargo.toml  README.md
common/docs/: overview.puml
common/src/: lib.rs
dataport/: Cargo.toml  data.json
dataport/src/: main.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: lib.rs
path_function/: Cargo.toml
path_function/src/: main.rs
